# aespa

./: .dockerignore  .env.example  .gitignore  AESPA.spec  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  build_mac.sh  build_win.ps1  docker-compose.yml  make_dmg.sh  notarize_mac.sh  notarize_only_mac.sh  publish.sh  pyproject.toml  sign_app.sh
.agents/: AGENTS.md
.claude/: launch.json  settings.local.json
.github/: copilot-instructions.md
.github/workflows/: docker-publish.yml  main.yml  release.yml
bedrock-api-scripts/: Use-SamlAwsCredentials.ps1  generate-token.sh  use-saml-aws-credentials.sh
docs/: CHANGELOG.md  agent-tool-reference.md  api-collection-testing-plan.md  architecture.md  dynamic-scan-tool-calls.md  juice-shop-results.md  pentest-architecture-improvement-plan.md  recon-hunter-plan.md  results-comparison.md  vuln-scanner-comparison.md
docs/agent-architecture-revamp/: recon-hunter-plan.md
docs/api-test-files/: auth.txt  customer-api.md
docs/guide/: api-running.md  index.md  web-running.md
docs/implementation-plans/: advanced-auth-implementation.md  api-collection-testing-plan.md  sast-scan-leads-plan.md  (+2 more)
frontend/: .oxlintrc.json  eslint.config.mjs  eslint_errors.json  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
scripts/: capture_doc_screenshots.py  generate_third_party_licenses.py
site/: index.html  styles.css
tests/: conftest.py  test_adversarial_validator.py  test_alice_service.py  test_alice_tasks.py  test_api_alice_context.py  test_api_collections_api.py  test_api_collections_export_import.py  test_api_coverage.py  test_api_docs.py  test_api_readiness.py  test_api_scanner.py  test_api_test_runs.py  test_browser_dom_check.py  test_browser_provisioning.py  test_copilot_provider.py  test_crawler_logic.py  test_db_migration.py  test_droid_provider.py  test_execution_monitor.py  test_failure_injection.py  test_llm_service.py  test_mentor_service.py  test_model_mixing.py  test_poc_validation.py  test_recon_summary.py  test_reporting_debug.py  test_sast_cleanup.py  test_scan_completion.py  test_scan_leads.py  test_scanner_service.py  test_scanner_sessions.py  test_settings_api.py  test_sites_api.py  test_sites_export_import.py  test_specialist_agent.py  test_test_runs_api.py  test_tls_scan.py  test_traffic_service.py  test_validation_logic.py  test_web_assets.py  (+4 more)
(+287 files in other folders)
