[project]
name = "aespa"
version = "0.5.20260610.1"
description = "AI-Enabled Security Pentesting Agent"
authors = [
    { name = "Edward Chow", email = "ledwardchow@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.97.0",
    "boto3>=1.42.0",
    "fastapi>=0.136.1",
    "google-genai>=1.74.0",
    "httpx>=0.28.1",
    "openai>=2.33.0",
    "playwright>=1.59.0",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.27",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.46.0",
    "cryptography>=42.0.0",
    "pyjwt>=2.8.0",
    "pyotp>=2.9.0",
]

[project.scripts]
aespa = "aespa:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
