[project]
name = "aespa"
version = "0.6.20260712.1"
description = "AI-Enabled Security Pentesting Agent"
authors = [
    { name = "Edward Chow", email = "ledwardchow@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.97.0",
    "boto3>=1.42.0",
    "fastapi>=0.136.1",
    "google-genai>=1.74.0",
    "httpx>=0.28.1",
    "openai>=2.33.0",
    "playwright>=1.59.0",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.31",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.46.0",
    "cryptography>=48.0.1",
    "pyjwt>=2.8.0",
    "pyotp>=2.9.0",
    "prance>=25.4.8.0",
]

[project.scripts]
aespa = "aespa:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # SQLModel domain classes named `Test*` (e.g. TestRun) collide with pytest's
    # test-class naming heuristic; they aren't tests. Pure noise.
    "ignore:cannot collect test class:pytest.PytestCollectionWarning",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
# E501 (line length) is not enforced — the codebase uses a wider line convention
# than the 88-char default and reformatting it wholesale is not worthwhile.
ignore = ["E501"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
